--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
             - name: Run golangci-lint
               uses: golangci/golangci-lint-action@v6
               with:
-                version: latest
+                version: v2.10.1
                 args: --timeout=5m
 
     test:
